# web-automation-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: hld.md  marketplace_run_commands.md
scripts/: codex_logged.sh  project_snapshot.sh  run_logged.sh
src/: __init__.py  main.py
src/browser/: __init__.py  factory.py  ui_actions.py
src/core/: config.py  logging.py  post_publish_status.py
src/flows/: __init__.py  execution_summary.py  flow_result.py  landing_flow.py  marketplace_group_share_flow.py  run_context.py  target_continuation_flow.py  target_flow.py
src/pages/: __init__.py  base_page.py  landing_page.py  marketplace_group_share_page.py  target_page.py
src/runtime/: job_selector.py  runtime_loader.py
src/services/: screenshot_service.py
tests/: test_browser_factory.py  test_config.py  test_job_selector.py  test_logging.py  test_main.py  test_marketplace_group_share_page.py  test_runtime_loader.py  test_target_page.py  test_ui_actions.py
tests/smoke/: test_bootstrap.py  test_landing_flow.py  test_marketplace_group_share_flow.py  test_target_continuation_flow.py  test_target_flow.py
